calico-policies/private-network-isolation/calico-v3/br-sao/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Nets for São Paulo multizone location: sao01, sao04, sao05
      - 166.9.82.6/32
      - 166.9.82.7/32
      - 166.9.83.6/32
      - 166.9.83.7/32
      - 166.9.84.6/32
      - 166.9.84.7/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for São Paulo multizone location: sao01, sao04, sao05
      - 166.9.82.6/32
      - 166.9.82.7/32
      - 166.9.83.6/32
      - 166.9.83.7/32
      - 166.9.84.6/32
      - 166.9.84.7/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
